<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appcodewithprachi.worrynot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_meditation"
        android:name="com.appcodewithprachi.worrynot.ui.meditation.MeditationFragment"
        android:label="@string/menu_meditation"
        android:textStyle="bold"
        tools:layout="@layout/fragment_meditaion" />

    <fragment
        android:id="@+id/nav_dietChart"
        android:name="com.appcodewithprachi.worrynot.ui.dietchart.DietchartFragment"
        android:label="@string/menu_dietChart"
        tools:layout="@layout/fragment_dietchart" />
</navigation>