<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradientbackground"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            app:fontFamily="@font/architects_daughter"
            android:textStyle="bold"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_meditation"
            android:icon="@drawable/ic_baseline_visibility_24"
            android:textStyle="bold"
            app:fontFamily="@font/architects_daughter"
            android:title="@string/menu_meditation" />
        <item
            android:id="@+id/nav_dietChart"
            android:icon="@drawable/ic_baseline_table_chart_24"
            android:textStyle="bold"
            app:fontFamily="@font/architects_daughter"
            android:title="@string/menu_dietChart" />
    </group>
</menu>