<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="560dp"
        android:background="@drawable/edit_round_no_color"
        android:contentDescription="@string/user_name_welcome_activity"
        android:text="@string/user_name_welcome_activity"
        android:textColor="@color/deeppink"
        android:textSize="30sp"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_word"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/welcome_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round_no_color"
        android:contentDescription="@string/welcome_word"
        android:text="@string/welcome"
        android:textColor="@color/deeppink"
        android:textSize="30sp"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toTopOf="@+id/happy_family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/best_wishes"
        android:layout_width="345dp"
        android:layout_height="222dp"
        android:background="@drawable/edit_round_no_color"
        android:paddingLeft="20dp"
        android:text="@string/wishes"
        android:textColor="@color/deeppink"
        android:textSize="25sp"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happy_family"
        app:layout_constraintVertical_bias="0.172" />

    <ImageView
        android:id="@+id/happy_family"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        app:srcCompat="@drawable/ahappy_family_two_children_png" />

    <Button
        android:id="@+id/Next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/Next_btn"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/best_wishes"
        app:layout_constraintVertical_bias="0.627" />
</androidx.constraintlayout.widget.ConstraintLayout>