<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground">

    <TextView
        android:id="@+id/quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:text="@string/a_motivational_quote_for_you"
        android:textColor="@color/ic_launcher_background"
        android:textSize="22sp"
        app:fontFamily="@font/aclonica" />

    <TextView
        android:id="@+id/mainquote"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="484dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/the_quote_is"
        app:fontFamily="@font/aclonicapara" />

    <ImageButton
        android:id="@+id/click_here_image_Button"
        android:layout_width="368dp"
        android:layout_height="380dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_round"
        android:contentDescription="@string/click_here_to_proceed_image_button"
        android:onClick="onClick"
        android:padding="30dp"
        app:srcCompat="@drawable/click_here_to_proceed" />

</RelativeLayout>

